style: fix header layout on mobile preview

--- a/src/components/UI/Header.module.css
+++ b/src/components/UI/Header.module.css
@@ -6,43 +6,47 @@ header {
   justify-content: space-between;
   align-items: center;
   border-bottom: #242526 solid 3px;
-  padding: 0.2rem 0.5rem;
+  padding: 0.4rem 0.3rem;
   top: 0;
   color: white;
   z-index: 10;
   background-color: #141414;
 }
 
-header input {
+.input-wrapper {
+  display: flex;
+  align-items: center;
+  position: relative;
+  max-width: 45%;
+}
+
+.input-wrapper svg {
+  position: absolute;
+  top: 27%;
+  right: 5%;
+  height: 0.8rem;
+  cursor: pointer;
+}
+
+.input-wrapper input {
   display: flex;
   height: 1.5rem;
   outline: none;
   border: none;
   color: white;
   border-radius: 50px;
-  padding: 0.8rem;
+  padding: 0.9rem;
   background-color: #242526;
-  max-width: 33%;
-}
-
-.input-wrapper {
-  position: relative;
-  margin-right: auto;
-}
-
-.input-wrapper svg {
-  position: absolute;
-  top: 30%;
-  right: 5%;
-  height: 1rem;
-  cursor: pointer;
+  max-width: 100%;
 }
 
 .header-logo-wrapper {
   display: flex;
   align-items: center;
-  height: 2rem;
-  width: auto;
+  width: 30%;
+  height: auto;
+  max-height: 2.8rem;
+  overflow: hidden;
 }
 
 .header-logo-wrapper img {
@@ -52,8 +56,9 @@ header input {
 .sign-btn {
   background-color: #212324;
   border: none;
-  border-radius: 15px;
-  font-size: 1rem;
+  border-radius: 10px;
+  font-size: 0.8rem;
+  padding: 0.4rem;
   color: #ffffff;
   cursor: pointer;
 }
@@ -118,20 +123,34 @@ header input {
     padding: 0.5rem 1rem;
     height: auto;
   }
+
+  .header-logo-wrapper {
+    width: auto;
+    max-height: none;
+  }
+
   .header-logo-wrapper img {
     height: 3.5rem;
   }
+
   .sign-btn {
+    font-size: 1rem;
     padding: 0.8rem;
   }
 
-  header input {
+  header .input-wrapper {
     height: 1.5rem;
-    padding: 1.2rem 2rem;
     margin-right: auto;
     margin-left: 2rem;
+  }
+
+  header .input-wrapper input {
+    padding: 1.2rem 2rem;
     font-size: 1.1rem;
-    max-width: none;
+  }
+  header .input-wrapper svg {
+    top: 18%;
+    height: 1.1rem;
   }
 
   .profile-image-wrapper {
